--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,10 +31,9 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
 
     map $status $loggable {
         ~^[23]  1;
@@ -50,6 +49,8 @@ http {
 
         location /api/ {
             proxy_pass http://localhost:8001;
+            gzip on;
+            gzip_proxied any;
         }
 
         location /videos/ {
@@ -70,11 +71,6 @@ http {
         location / {
             proxy_pass http://localhost:8002;
         }
-
-        # location / {
-        #     root   html;
-        #     index  index.html index.htm;
-        # }
         
 
         #error_page  404              /404.html;
