--- a/fe/package.json
+++ b/fe/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "vite dev --port 8002",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "vite preview --port 8002",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
@@ -13,28 +13,29 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/kit": "^2.12.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/wicg-file-system-access": "^2020.9.6",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
-		"carbon-components-svelte": "^0.80.0",
+		"carbon-components-svelte": "^0.87.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"vitest": "^0.34.0"
+		"eslint-plugin-svelte": "^2.45.1",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.2.6",
+		"svelte": "^5.1.5",
+		"svelte-check": "^4.1.0",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"vite": "^5.4.4",
+		"vitest": "^2.0.5"
 	},
 	"type": "module",
 	"dependencies": {
 		"@carbon/web-components": "^2.0.1",
+		"@intlify/eslint-plugin-svelte": "^0.5.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
 		"carbon-icons-svelte": "^12.3.0"
 	}
 }
