--- a/be/pyproject.toml
+++ b/be/pyproject.toml
@@ -3,13 +3,13 @@ name = "be"
 version = "0.0.1"
 dependencies = [
     "cachetools>=5.5.0",
-    "flasgger>=0.9.7.1",
-    "flask-compress>=1.17",
-    "flask-cors>=5.0.0",
+    "fastapi[standard]>=0.115.6",
+    "fastapi-utils>=0.8.0",
     "pillow>=11.0.0",
     "rarfile>=4.2",
     "rich>=13.9.4",
     "sqlmodel>=0.0.22",
+    "typing-inspect>=0.9.0",
 ]
 
 [dependency-groups]
