--- a/fe/package.json
+++ b/fe/package.json
@@ -3,9 +3,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev --port 8002",
+		"dev": "vite dev --port 8002 --host",
 		"build": "vite build",
-		"preview": "vite preview --port 8002",
+		"preview": "vite preview --port 8002 --host",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
@@ -13,6 +13,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.12.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/wicg-file-system-access": "^2020.9.6",
