--- a/be/pyproject.toml
+++ b/be/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "sqlmodel>=0.0.22",
     "typing-inspect>=0.9.0",
 ]
+requires-python = ">=3.12"
 
 [dependency-groups]
 dev = [
