--- a/fe/package.json
+++ b/fe/package.json
@@ -10,9 +10,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"api": "openapi-ts"
 	},
 	"devDependencies": {
+		"@hey-api/openapi-ts": "^0.64.4",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.12.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -35,6 +37,7 @@
 	"type": "module",
 	"dependencies": {
 		"@carbon/web-components": "^2.0.1",
+		"@hey-api/client-fetch": "^0.7.3",
 		"@intlify/eslint-plugin-svelte": "^0.5.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"carbon-icons-svelte": "^12.3.0"
