--- a/fe/package.json
+++ b/fe/package.json
@@ -11,7 +11,8 @@
 		"test": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"api": "openapi-ts"
+		"api": "openapi-ts",
+		"prepare": "cd .. && husky fe/.husky"
 	},
 	"devDependencies": {
 		"@hey-api/openapi-ts": "^0.64.4",
@@ -25,6 +26,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.45.1",
+		"husky": "^9.1.7",
 		"prettier": "^3.1.0",
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.1.5",
@@ -41,5 +43,8 @@
 		"@intlify/eslint-plugin-svelte": "^0.5.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"carbon-icons-svelte": "^12.3.0"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "4.34.7"
 	}
 }
