--- a/fe/package.json
+++ b/fe/package.json
@@ -39,12 +39,19 @@
 	"type": "module",
 	"dependencies": {
 		"@carbon/web-components": "^2.0.1",
+		"@faker-js/faker": "^9.6.0",
 		"@hey-api/client-fetch": "^0.7.3",
 		"@intlify/eslint-plugin-svelte": "^0.5.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"carbon-icons-svelte": "^12.3.0"
+		"carbon-icons-svelte": "^12.3.0",
+		"msw": "^2.7.3"
 	},
 	"optionalDependencies": {
 		"@rollup/rollup-linux-x64-gnu": "4.34.7"
+	},
+	"msw": {
+		"workerDirectory": [
+			"static"
+		]
 	}
 }
